--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,6 +33,8 @@ repos:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-yaml
+        # Exclude the charts/local-api/templates
+        exclude: charts/local-api/templates
     -   id: debug-statements
     #-   id: double-quote-string-fixer
     -   id: name-tests-test
