--- a/confs/docker-compose/nginx/nginx.conf
+++ b/confs/docker-compose/nginx/nginx.conf
@@ -3,11 +3,35 @@ http {
     server {
         listen 8443 ssl;
         server_name localhost;
-
         ssl_certificate /etc/nginx/certs/ssl_certificate.crt;
         ssl_certificate_key /etc/nginx/certs/ssl_certificate.key;
-
         location / {
+            proxy_pass http://web:5000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_headers_hash_max_size 1024;
+            proxy_headers_hash_bucket_size 128;
+            # Harden security
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
+            proxy_set_header X-Forwarded-Server $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Frame-Options DENY;
+            proxy_set_header X-Content-Type-Options nosniff;
+            proxy_set_header X-XSS-Protection "1; mode=block";
+            proxy_set_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+            add_header Referrer-Policy "no-referrer";
+            add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self'; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; frame-src 'none'; worker-src 'none'; manifest-src 'self';";
+        }
+
+        location /auth {
+            limit_req zone=auth_rate_limit burst=5 nodelay;
             proxy_pass http://web:5000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
