fix: install docker-compose-v2

--- a/.github/workflows/zap-scanner.yaml
+++ b/.github/workflows/zap-scanner.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Run image
         run: |
           sudo apt update
-          sudo apt install -y docker-compose
+          sudo apt install -y docker-compose-v2
           docker-compose --version
           just run-ci
       - name: ZAP Scan
