--- a/.github/workflows/zap-scanner.yaml
+++ b/.github/workflows/zap-scanner.yaml
@@ -19,7 +19,10 @@ jobs:
           # Wait for the web application to start. Retry 5 times every 5 seconds.
           for i in {1..5}; do
             sleep 5
-            curl -s -o /dev/null -w "%{http_code}" http://localhost:8443/ && exit 0
+            response_code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8443)
+            if [ $response_code -eq 200 ]; then
+              exit 0
+            fi
           done
           exit 1
 
