--- a/.github/workflows/zap-scanner.yaml
+++ b/.github/workflows/zap-scanner.yaml
@@ -19,7 +19,7 @@ jobs:
           # Wait for the web application to start. Retry 5 times every 5 seconds.
           for i in {1..5}; do
             sleep 5
-            response_code=$(curl -s -o /dev/null -w "%{http_code}" https://localhost:8443/health || true)
+            response_code=$(curl -s -o /dev/null -w "%{http_code}" https://127.0.0.1/health || true)
             if [ $response_code -eq 200 ]; then
               exit 0
             fi
@@ -31,6 +31,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           format: openapi
-          target: 'https://localhost:8443/openapi.json'
+          target: 'https://127.0.0.1/openapi.json'
           # The '-a' option activates all active scanners. Use this for comprehensive scanning.
           cmd_options: '-a'
