--- a/.github/workflows/zap-scanner.yaml
+++ b/.github/workflows/zap-scanner.yaml
@@ -2,7 +2,7 @@ name: ZAP Scan
 on:
   push:
     branches:
-      - feat/fix-zap-tests
+      - main
 permissions:
   issues: write
 jobs:
@@ -16,7 +16,7 @@ jobs:
       - name: Run image
         run: |
           just run-ci
-          curl --retry 5 --retry-connrefused --retry-max-time 120 -k -s https://127.0.0.1/health
+          curl --retry 10 --retry-connrefused --retry-max-time 120 -k -s https://127.0.0.1/health
 
       - name: ZAP Scan
         uses: zaproxy/action-api-scan@v0.7.0
