--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 PORT="5000"
-DATABASE_UR="sqlite:///:memory:"
+DATABASE_URL="sqlite:///./data/test_db"
 JWT_SECRET="secret"
 JWT_ALGORITHM="HS256"
 ENVIRONMENT="development"
