--- a/.mergify.yml
+++ b/.mergify.yml
@@ -8,3 +8,8 @@ pull_request_rules:
     actions:
       merge:
         method: squash
+queue_rules:
+  - name: default
+    batch_size: 1
+    batch_max_wait_time: 10 min
+    merge_method: squash
