--- a/.mergify.yml
+++ b/.mergify.yml
@@ -10,6 +10,7 @@ pull_request_rules:
         method: squash
 queue_rules:
   - name: default
+    description: This rule processes merge requests one at a time to ensure a linear history and better usage of GHA.
     batch_size: 1
     batch_max_wait_time: 10 min
     merge_method: squash
