fix(mergify): Change the description to a comment.

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -9,8 +9,8 @@ pull_request_rules:
       merge:
         method: squash
 queue_rules:
+ # This rule processes merge requests one at a time to ensure a linear history and better usage of GHA.
   - name: default
-    description: This rule processes merge requests one at a time to ensure a linear history and better usage of GHA.
     batch_size: 1
     batch_max_wait_time: 10 min
     merge_method: squash
