fix: Revert runner's ubuntu version

--- a/.github/workflows/auto-tagging.yaml
+++ b/.github/workflows/auto-tagging.yaml
@@ -27,7 +27,7 @@ env:
 jobs:
   tag:
     permissions: write-all
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
       with:
