--- a/.github/workflows/snorkell-auto-documentation.yml
+++ b/.github/workflows/snorkell-auto-documentation.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   Documentation:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - name: Snorkell DocGen Client
       uses: SingularityX-ai/snorkell-documentation-client@v1.0.0
