--- a/.github/workflows/vuln-scan.yaml
+++ b/.github/workflows/vuln-scan.yaml
@@ -7,7 +7,7 @@ jobs:
   test:
     env:
       PIP_CACHE_DIR: /home/runner/.cache/pip
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
