--- a/.github/workflows/zap-scanner.yaml
+++ b/.github/workflows/zap-scanner.yaml
@@ -7,7 +7,7 @@ permissions:
   issues: write
 jobs:
   zap_scan:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     name: Scan the webapplication
     steps:
       - uses: actions/checkout@v4
